# drip

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  install.sh
.cargo-husky/hooks/: pre-commit  pre-push
.github/: FUNDING.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cla.yml  release-please.yml  release.yml  security.yml
scripts/: bench.sh  bench_multilang.sh  bench_non_read_hooks.sh  bench_post_edit.sh  bench_reddit.sh  generate_benchmarks_md.py  test-install.sh  verify_signatures.sh
scripts/bench_fixtures/: DataRepository.kt  DataRepository_v2.kt  OrderService.cs  OrderService_v2.cs  UserRepository.java  UserRepository_v2.java  api_client.ts  api_client_v2.ts  example.json  http_handler.go  http_handler_v2.go  json_parser.cpp  json_parser_v2.cpp  pricing_engine.py  pricing_engine_v2.py  session_manager.rs  session_manager_v2.rs
scripts/bench_output/: all_results.json  cpp.json  cpp_first_read.txt  csharp.json  csharp_first_read.txt  go.json  go_first_read.txt  java.json  java_first_read.txt  kotlin.json  kotlin_first_read.txt  non_read_hooks.json  post_edit_cert.json  python.json  python_first_read.txt  rust.json  rust_first_read.txt  signatures.json  typescript.json  typescript_first_read.txt
src/: main.rs  mcp.rs
src/commands/: cache.rs  completions.rs  doctor.rs  hook.rs  init.rs  meter.rs  mod.rs  read.rs  refresh.rs  registry.rs  replay.rs  reset.rs  sessions.rs  source_map.rs  update.rs  watch.rs
src/core/: cache.rs  compress.rs  differ.rs  git.rs  ignore.rs  inspect.rs  mod.rs  session.rs  term.rs  tokens.rs  tracker.rs
src/hooks/: claude.rs  claude_glob.rs  claude_grep.rs  claude_post_edit.rs  claude_pre_edit.rs  claude_session_start.rs  gemini.rs  gemini_compress.rs  mod.rs
tests/: integration.rs
tests/common/: mod.rs
tests/integration/: accounting_audit.rs  agent_ux.rs  agents_install.rs  claude_init.rs  codex_init.rs  completions.rs  compression.rs  concurrency.rs  cross_platform.rs  diff_accuracy.rs  diff_perf.rs  doctor.rs  dripignore.rs  dry_run.rs  edge_cases.rs  gemini_compress_hook.rs  mcp_server.rs  registry.rs  (+14 more)
(+2 files in other folders)
